fix(security): fix cors bug